--- a/public/htmls/site.html
+++ b/public/htmls/site.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Akula rohith</h1>
+<p>17h51a0561.</p>
 <script src="js/site.js"></script>
 </body>
 </html>
