--- a/public/htmls/site.html
+++ b/public/htmls/site.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-<h1>Akula rohith</h1>
-<p>17h51a0561.</p>
+<h1><center>Akula rohith</center></h1>
+<p><center>17h51a0561</center></p>
 <script src="js/site.js"></script>
 </body>
 </html>
