--- a/public/htmls/site.html
+++ b/public/htmls/site.html
@@ -5,12 +5,20 @@
 <meta charset="UTF-8">
 <title>Being Zero</title>
 <link rel="shortcut icon" href="img/favicon.ico">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" />
 <link rel="stylesheet" href="css/site.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
 </head>
 <body>
 
 <h1><center>Akula rohith</center></h1>
 <p><center>17h51a0561</center></p>
+<input type = "button" value ="OK"></input>
 <script src="js/site.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
 </html>
